# sdl-weekend

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  launch.sh
1_shooter/: 1_shooter.c
1_shooter/assets/: tilesets.h
2_batching/: 2_batching.c
2_dodway/: 2_dodway.c  2_many.c  mesh.h
2_many/: _null.c
3_microui/: build.sh
framework/components/include/: components_animation.h  components_graphics.h  components_health.h  components_shape.h  components_transform.h
framework/entities/include/: entities_game.h  entities_tds.h
framework/entities/src/: entities_tds.c
framework/foundation/include/: camera2d.h  qsort.h  sdl2_app.h  soa.h  tilemap.h  utest.h  warning.h
framework/foundation/include/math/: m3d.h  math_helpers.h
framework/foundation/include/types/: bundle.h  primitive.h
framework/foundation/src/: main.c  soa.c
framework/foundation/src/cglm/clipspace/: ortho_lh_no.c  ortho_lh_zo.c  ortho_rh_no.c  ortho_rh_zo.c  persp_lh_no.c  persp_lh_zo.c  persp_rh_no.c  persp_rh_zo.c  project_no.c  project_zo.c  view_lh_no.c  view_lh_zo.c  view_rh_no.c  view_rh_zo.c
framework/include/: bundle_types.h  math_helpers.h  sdl2_app.h
framework/soa_components/include/: soa_components_animation.h  soa_components_color.h  soa_components_damage.h  soa_components_graphics.h  soa_components_health.h  soa_components_movement.h  soa_components_physics.h  soa_components_sdl2.h  soa_components_shape.h  soa_components_tilemap.h  soa_components_transform.h  soa_components_vertex.h
framework/soa_entities/include/: soa_entities_sdl2.h  soa_entities_tds.h  soa_entities_vertex.h
framework/soa_entities/src/: soa_entities_tds.c
framework/soa_systems/include/: soa_systems_animation.h  soa_systems_bullet.h  soa_systems_camera.h  soa_systems_despawn.h  soa_systems_movement.h  soa_systems_physics.h  soa_systems_sdl2.h  soa_systems_tilemap.h  soa_systems_transform.h  soa_systems_vertex.h
framework/soa_systems/src/: soa_systems_animation.c  soa_systems_bullet.c  soa_systems_camera.c  soa_systems_despawn.c  soa_systems_movement.c  soa_systems_physics.c  soa_systems_sdl2.c  soa_systems_tilemap.c  soa_systems_transform.c  soa_systems_vertex.c
framework/src/: soa.c
framework/systems/include/: systems_animation.h  systems_bullet.h  systems_despawn.h  systems_movement.h  systems_physics.h  systems_sdl2.h  systems_tilemap.h  systems_transform.h
framework/systems/src/: systems_animation.c  systems_bullet.c  systems_despawn.c  systems_movement.c  systems_physics.c  systems_sdl2.c  systems_tilemap.c
src/: asset.h  game.c  game.h  game_data.h  game_timer.c  game_timer.h  main.c  math_helpers.h  soa.c  soa.h  tilemap.h
src/assets/: tile_animations.h  tile_properties.h  tilemap_encodings.h  tilemaps.h  tilesets.h
src/components/: components_animation.h  components_damage.h  components_graphics.h  components_health.h  components_movement.h  components_physics.h  components_shape.h  components_tilemap.h  components_transform.h
src/components/include/: components_movement.h  components_physics.h  components_tilemap.h
src/entities/: entities_game.c  entities_game.h
src/entities/src/: entities_game.c
src/game/: game.c  game.h  game_data.h  main.c
src/systems/: systems_animation.c  systems_bullet.c  systems_bullet.h  systems_camera.c  systems_camera.h  systems_despawn.c  systems_despawn.h  systems_movement.c  systems_movement.h  systems_physics.c  systems_physics.h  systems_sdl2.c  systems_sdl2.h  systems_tilemap.c  systems_tilemap.h  systems_transform.c  systems_transform.h
src/systems/include/: systems_bullet.h  systems_sdl2.h  systems_tilemap.h
src/systems/src/: systems_sdl2.c  systems_transform.c
